--- a/symfony_fw/config/validator/validation.yaml
+++ b/symfony_fw/config/validator/validation.yaml
@@ -896,7 +896,7 @@ App\Entity\MicroserviceUnitTest:
             - Regex:
                 groups: [microservice_unit_test_create, microservice_unit_test_profile]
                 htmlPattern: false
-                pattern: /^(https?:\/\/)([a-zA-Z0-9\/._\-]+)$/
+                pattern: /^(https?:\/\/)([a-zA-Z0-9\/._\-\r\n|\r|\n]+)$/
         code:
             - NotBlank:
                 groups: [microservice_unit_test_create, microservice_unit_test_profile]
