Session over check fix.

--- a/symfony_fw/config/validator/validation.yaml
+++ b/symfony_fw/config/validator/validation.yaml
@@ -937,3 +937,10 @@ App\Entity\MicroserviceCron:
         time:
             - NotBlank:
                 groups: [microservice_cron_create, microservice_cron_profile]
+        active:
+            - NotBlank:
+                groups: [microservice_cron_create, microservice_cron_profile]
+            - Regex:
+                groups: [microservice_cron_create, microservice_cron_profile]
+                htmlPattern: false
+                pattern: /^1$|^0$/
