Draft page - Complete.

--- a/symfony_fw/config/validator/validation.yaml
+++ b/symfony_fw/config/validator/validation.yaml
@@ -228,6 +228,20 @@ App\Entity\Page:
                 groups: [page_create, page_profile]
                 htmlPattern: false
                 pattern: /^[(a-zA-Z0-9 )|(\p{L}\p{N})]+|[-]$/
+        comment:
+            - NotBlank:
+                groups: [page_create, page_profile]
+            - Regex:
+                groups: [page_create, page_profile]
+                htmlPattern: false
+                pattern: /^1$|^0$/
+        onlyParent:
+            - NotBlank:
+                groups: [page_create, page_profile]
+            - Regex:
+                groups: [page_create, page_profile]
+                htmlPattern: false
+                pattern: /^1$|^0$/
         onlyLink:
             - NotBlank:
                 groups: [page_create, page_profile]
