--- a/symfony_fw/config/packages/twig.yaml
+++ b/symfony_fw/config/packages/twig.yaml
@@ -9,3 +9,4 @@ twig:
         pathRoot: '%kernel.project_dir%'
         pathSrc: '%kernel.project_dir%/src'
         pathPublic: '%kernel.project_dir%/public'
+    exception_controller: null
