--- a/symfony_fw/src/Config.php.dist
+++ b/symfony_fw/src/Config.php.dist
@@ -42,7 +42,11 @@ class Config {
     
     // Functions public
     public function __construct() {
-        $this->databaseConnectionFields = Array("", "", "", Array());
+        $this->databaseConnectionFields = Array("", "", "", Array(
+            PDO::MYSQL_ATTR_INIT_COMMAND => "SET NAMES utf8",
+            PDO::ATTR_DEFAULT_FETCH_MODE => PDO::FETCH_ASSOC,
+            PDO::ATTR_ERRMODE => PDO::ERRMODE_EXCEPTION
+        ));
         $this->protocol = isset($_SERVER['HTTPS']) == true ? "https://" : "http://";
         $this->pathRoot = "/path_root";
         $this->urlRoot = "/path_public";
