--- a/symfony_fw/config/validator/validation.yaml
+++ b/symfony_fw/config/validator/validation.yaml
@@ -599,6 +599,10 @@ App\Entity\Setting:
         secretPassphrase:
             - NotBlank:
                 groups: [setting]
+            - Regex:
+                groups: [setting]
+                htmlPattern: false
+                pattern: /^[a-zA-Z0-9]+$/
         payment:
             - NotBlank:
                 groups: [setting]
