--- a/symfony_fw/composer.json
+++ b/symfony_fw/composer.json
@@ -4,6 +4,8 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "laminas/laminas-code": "^3.4",
+        "laminas/laminas-eventmanager": "^3.2",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^5.0",
         "symfony/apache-pack": "^1.0",
@@ -38,6 +40,9 @@
         "symfony/web-server-bundle": "^4.1"
     },
     "config": {
+    	"platform": {
+	      "php": "7.2"
+	    },
         "preferred-install": {
             "*": "dist"
         },
