--- a/symfony_fw/config/validator/validation.yaml
+++ b/symfony_fw/config/validator/validation.yaml
@@ -142,6 +142,9 @@ App\Entity\MicroserviceCron:
         time:
             - NotBlank:
                 groups: [microservice_cron_create, microservice_cron_profile]
+        code:
+            - NotBlank:
+                  groups: [microservice_cron_create, microservice_cron_profile]
         active:
             - NotBlank:
                 groups: [microservice_cron_create, microservice_cron_profile]
@@ -715,6 +718,48 @@ App\Entity\Setting:
                 groups: [setting]
                 htmlPattern: false
                 pattern: /^[a-zA-Z0-9-_.]+$/
+        serverIp:
+            - NotBlank:
+                  groups: [setting]
+            - Regex:
+                  groups: [setting]
+                  htmlPattern: false
+                  pattern: /^[0-9\/.]+$/
+        serverSshUsername:
+            - Regex:
+                  groups: [setting]
+                  htmlPattern: false
+                  pattern: /^[a-zA-Z0-9_\-]+$/
+        serverSshPassword:
+            - Regex:
+                  groups: [setting]
+                  htmlPattern: false
+                  pattern: /^.{1,50}$/
+        serverKeyPublic:
+            - File:
+                  groups: [setting]
+                  maxSize: 1M
+                  maxSizeMessage: error maxSize
+        serverRemoveKeyPublic:
+            - Regex:
+                  groups: [setting]
+                  htmlPattern: false
+                  pattern: /^1$|^0$/
+        serverKeyPrivate:
+            - File:
+                  groups: [setting]
+                  maxSize: 1M
+                  maxSizeMessage: error maxSize
+        serverRemoveKeyPrivate:
+            - Regex:
+                  groups: [setting]
+                  htmlPattern: false
+                  pattern: /^1$|^0$/
+        serverKeyPrivatePassword:
+            - Regex:
+                  groups: [setting]
+                  htmlPattern: false
+                  pattern: /^.{1,50}$/
 
 App\Entity\SettingLinePush:
     properties:
