--- a/symfony_fw/composer.json
+++ b/symfony_fw/composer.json
@@ -36,8 +36,7 @@
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
-        "symfony/test-pack": "^1.0",
-        "symfony/web-server-bundle": "^4.1"
+        "symfony/test-pack": "^1.0"
     },
     "config": {
     	"platform": {
