--- a/symfony_fw/config/validator/validation.yaml
+++ b/symfony_fw/config/validator/validation.yaml
@@ -710,7 +710,7 @@ App\Entity\Setting:
             - Regex:
                 groups: [setting]
                 htmlPattern: false
-                pattern: /^[a-zA-Z0-9\/-_\.]+$/
+                pattern: /^[a-zA-Z0-9\/._\-]+$/
         serverHost:
             - NotBlank:
                 groups: [setting]
