--- a/symfony_fw/src/Config.php.dist
+++ b/symfony_fw/src/Config.php.dist
@@ -38,11 +38,11 @@ class Config {
     // Functions public
     public function __construct() {
         $this->protocol = isset($_SERVER['HTTPS']) == true ? "https://" : "http://";
-        $this->pathRoot = "/path_root";
-        $this->urlRoot = "/path_public";
+        $this->pathRoot = "/project/uebusaito/root/symfony_fw";
+        $this->urlRoot = "/project/uebusaito/root/symfony_fw/public";
         $this->supportSymlink = true;
         $this->file = "/index.php";
-        $this->name = "Website name";
+        $this->name = "Uebusaito 1.0.0";
     }
     
     // Functions private
